Implement notebook pyhton apiu fro eae
